# microservice-auth

./: .gitignore  docker-compose.yml
auth-service/: Dockerfile  go.mod  go.sum  main.go
auth-service/database/: db.go
auth-service/kafkaclient/: consumer.go  producer.go
auth-service/models/: User.go
auth-service/services/login/: login.go  login_test.go
auth-service/utils/: validation.go
stats-service/: .env  Cargo.toml  Dockerfile
stats-service/src/: main.rs
stats-service/src/db/: mod.rs
stats-service/src/entities/: mod.rs
stats-service/src/kafka_client/: mod.rs
stats-service/src/services/: mod.rs
users-service/: Dockerfile  package-lock.json  package.json
users-service/src/: app.module.ts
users-service/src/kafka/: kafka.service.ts
users-service/src/users/: users.controller.spec.ts  users.controller.ts  users.module.ts  users.service.spec.ts  users.service.ts
users-service/src/users/dto/: create-user.dto.ts
users-service/src/users/entities/: user.entity.ts
users-service/src/users/types/: index.ts
users-service/src/utils/: hashing.ts
users-service/test/: app.e2e-spec.ts
